--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "firebase deploy"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
-    "@google/genai": "^1.15.0",
     "types": "^0.1.1",
     "firebase": "^12.1.0"
   },
